# revos

./: .gitignore  .revos.json  Makefile  README.md  codecheck.sh  config.sh
base.app/: .base.h.old  Makefile  base.c  base.h
gpio_c.driver/: .driver.json  Makefile  main.h
rock/: Cargo.toml
rock/src/: main.rs
template.app/: .app.json  Makefile  main.c  template.c  template.h
