[package]
name = "rock"
version = "0.1.0"
authors = ["nikto_b <niktob560@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = {version = "0.10.9", features = ["blocking"]}
flate2 = "1.0.19"
tar = "0.4.3"
fs_extra = "0.1.0"